--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ figure {
     color: #000000;
   }
 
-  @media (hover: none){
+  @media (max-width: 1100px){
     .img {
         max-width: 100%;
         height: auto;
