--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,7 @@ figure {
       }
       .imgg {
         margin: 10px;
+        display:list-item;
         justify-content: center;
       }
       .portretas {
